// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkspaceNameFormGroup snapshots screenshot in editable mode 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="editable"
    >
      my-project
      <button
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        data-testid="edit-workspace-name-button"
        disabled={false}
        onClick={[Function]}
        role={null}
        title="Edit Workspace Name"
        type="button"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"
          />
        </svg>
      </button>
    </span>
  </div>
</div>
`;

exports[`WorkspaceNameFormGroup snapshots screenshot in readonly mode 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="readonly"
    >
      my-project
    </span>
  </div>
</div>
`;

exports[`WorkspaceNameFormGroup snapshots screenshot when cluster console is NOT available 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="readonly"
    >
      my-project
    </span>
  </div>
</div>
`;

exports[`WorkspaceNameFormGroup snapshots screenshot when cluster console is available 1`] = `
<div
  className="pf-c-form__group"
>
  <div
    className="pf-c-form__group-label"
  >
    <label
      className="pf-c-form__label"
    >
      <span
        className="pf-c-form__label-text"
      >
        Workspace
      </span>
    </label>
     
  </div>
  <div
    className="pf-c-form__group-control"
  >
    <span
      className="readonly"
    >
      <a
        aria-disabled={false}
        aria-label="my-project (opens in new tab)"
        className="pf-c-button pf-m-link pf-m-inline"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={null}
        href="https://console-openshift-console.apps-crc.testing/k8s/ns//workspace.devfile.io~v1alpha2~DevWorkspace/my-project"
        role={null}
        target="_blank"
        type={null}
      >
        my-project
        <span
          className="pf-c-button__icon pf-m-end"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 80v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48zm-88 16H248.029c-21.313 0-32.08 25.861-16.971 40.971l31.984 31.987L67.515 364.485c-4.686 4.686-4.686 12.284 0 16.971l31.029 31.029c4.687 4.686 12.285 4.686 16.971 0l195.526-195.526 31.988 31.991C358.058 263.977 384 253.425 384 231.979V120c0-13.255-10.745-24-24-24z"
            />
          </svg>
        </span>
      </a>
    </span>
  </div>
</div>
`;
